--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    padding: 4em;
     background: lavender;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
