--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 4em;
+    padding: 1em 4em 4em;
     background: rgb(164, 141, 180);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -65,4 +65,38 @@ img {
     max-width: 100%;
     height: auto;
     padding-bottom: 10px;
+}
+
+figcaption {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.poster {
+    max-width: 50%;
+}
+
+li {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 120%;
+    font-weight: bold;
+    text-align: left;
+}
+
+.aboutme {
+    margin: 2em 10em;
+    padding: 1em 3em;
+    background-color: rgba(138, 43, 226, .4);
+    display: flex;
+    justify-content: space-between;
+    gap: 5em;
+}
+
+.description .text {
+    flex: 1;
+}
+
+.description .photo {
+    max-width: 20em;
+    height: auto;
 }
