--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1 {
     font: 8em Jaini;
     color: black;
     -webkit-text-fill-color: goldenrod;
-    -webkit-text-stroke: 4px;
+    -webkit-text-stroke: .03em;
     margin-bottom: 0;
 }
 
@@ -34,7 +34,30 @@ h2 {
 
 .highlight {
     font: 1em Jaini;
-    color: goldenrod
+    color: gold
+}
+
+.video-wrapper {
+  max-width: 1200px; /* or whatever width you want */
+  margin: 2em auto;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  margin: 2em auto;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 p {
@@ -44,10 +67,13 @@ p {
     text-align: left;
 }
 
-div.description {
-    margin: 2em 10em;
-    padding: 1em 3em;
+.description,
+.aboutme {
+    max-width: 90%;
+    margin: 2em auto;
+    padding: 1em 2em;
     background-color: rgba(138, 43, 226, .4);
+    border-radius: 1em;
 }
 
 .leftalign {
@@ -83,15 +109,6 @@ li {
     text-align: left;
 }
 
-.aboutme {
-    margin: 2em 10em;
-    padding: 1em 3em;
-    background-color: rgba(138, 43, 226, .4);
-    display: flex;
-    justify-content: space-between;
-    gap: 5em;
-}
-
 .description .text {
     flex: 1;
 }
@@ -99,4 +116,44 @@ li {
 .description .photo {
     max-width: 20em;
     height: auto;
+}
+
+@media (max-width: 768px) {
+    .aboutme {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+
+    .description .photo,
+    .description .text {
+        max-width: 100%;
+    }
+
+    h1 {
+        font-size: 4.3em;
+    }
+
+    h2 {
+        font-size: 2em;
+    }
+
+    .subheading {
+        font-size: 1.5em;
+    }
+
+    p, li {
+        font-size: 100%;
+    }
+
+    .poster {
+        max-width: 70%;
+    }
+
+    figure {
+        max-width: 90%;
+        margin: 0 auto;
+        padding: 1em 0em;
+        text-align: left;
+    }
 }
