--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,10 @@ p {
     border-radius: 1em;
 }
 
+.aboutme {
+    display: flex;
+}
+
 .leftalign {
     text-align: left;
 }
@@ -114,6 +118,7 @@ li {
 }
 
 .description .photo {
+    padding: 1em;
     max-width: 20em;
     height: auto;
 }
